# CodingExercises

./: desafio21.R  desafio5.R
.trunk/: trunk.yaml
Julia/: Euler23.jl  problem23.jl  puzzleSolver.jl
R/: armstrongNumbers.R  criptoSquare.R  (+17 more)
python/: armstrongNumbers.py  atmHeist.py  killerSudoku.py  luhn.py  maxEarnings.py  mineSweeper.py  puzzleSolver.py  pyproject.toml  runLengthEncoding.py  saddlePoints.py  squareRoot.py  ticTacToe.py
python/Euler/: 30.py
python/src/: temp.py
python/src/Euler/: 31.py
python/src/codingexercises/: binarySearchTree.py  catalanNumber.py  circularPrimes.py  coinCombinations.py  complexNumber.py  gameOfLife.py  goCounting.py  hangman.py  jumpingKangaroos.py  killerSudoku.py  knapsack.py  largestSeriesProduct.py  maximizeSegments.py  pascalTriangle.py  pov.py  railFenceCipher.py  rationalNumber.py  redundantSignalTowers.py  rpn.py  saddlePoints.py  satellite.py  sgfParsing.py  spiralMatrix.py  staircase.py  variableLengthQuantity.py  zebraPuzzle.py  zipper.py
python/tests/: test.zebraPuzzle.py  test_binarySearchTree.py  test_catalanNumber.py  test_coinCombinations.py  test_complexNumber.py  test_gameOfLife.py  test_goCounting.py  test_jumpingKangaroos.py  test_knapsack.py  test_largestSeriesProduct.py  test_maximizeSegments.py  test_pascalTriangle.py  test_pov.py  test_railFenceCipher.py  test_rationalNumber.py  test_redundantSignalTowers.py  test_rpn.py  test_saddlePoints.py  test_satellite.py  test_sgfParsing.py  test_spiralMatrix.py  test_staircase.py  test_variableLenghtQuantity.py  test_zebraPuzzle.py  test_zipper.py
(+19 files in other folders)
