[project]
name = "codingexercises"
version = "0.1.0"
description = ""
authors = [{ name = "joaovantol", email = "joaovantol@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-profiling = "^1.8.1"
pytest-cov = "^6.2.1"
snakeviz = "^2.2.2"
mypy = "^1.16.1"
radon = "5.1"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra", "-q", "-p", "profiling"]
pythonpath = "./src"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]

[tool.ruff]
extend-include = ["*.ipynb"]
